fix: list flex on tablet

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -968,12 +968,17 @@ body {
   margin-bottom: var(--space-2);
 }
 
+.about__item {
+  max-width: 331px;
+  margin: 0 auto;
+}
+
 @media screen and (min-width: 640px) {
   .about__image-container {
     max-width: 497px;
     margin: initial;
     margin-left: auto;
-    margin-bottom: var(--space-4);
+    margin-bottom: var(--space-3-x);
   }
   .about__text-container {
     text-align: initial;
@@ -983,9 +988,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -995,6 +1000,8 @@ body {
             flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin: -12px 0 0 -12px;
+    width: calc(100% + 12px);
   }
   .about__list > *:not(:last-child) {
     margin-bottom: initial;
@@ -1003,7 +1010,7 @@ body {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
-    margin: var(--space-1-xx) 0;
+    margin: 12px 0 0 12px;
   }
 }
 
